--- a/settings.json
+++ b/settings.json
@@ -3,8 +3,8 @@
 "autoplaymusic": true,
 "autocomposing": true,
 "autorecording": true,
-"NamaBot":"AnisaaChann🎋",
-"NomorOwner":"6282138919347",
-"NamaOwner":"Helga",
+"NamaBot":"XinnBotz🎋",
+"NomorOwner":"6289673723168",
+"NamaOwner":"AlbiGz",
 "HunterApi":"Ikyy69"
 }
